<resources>
    <string name="app_name">Hardware Warehouse</string>
    <string name="common_text">Common:</string>
    <string name="store_text">Store:</string>
    <string name="outside_text">Outside:</string>
    <string name="plus_button_text" translatable="false">+</string>
    <string name="minus_button_text" translatable="false">-</string>
    <string name="give_text">Give</string>
    <string name="return_text">Return</string>
    <string name="hardware_splash_text">HARDWARE</string>
    <string name="warehouse_splash_text">WAREHOUSE</string>
    <string name="add_to_store_description">Add to store</string>
    <string name="undo_description" translatable="false">Undo</string>
    <string name="quantity_label">Quantity:</string>
    <string name="name_hint">Name</string>
    <string name="fill_all_fields">Fill all fields</string>
    <string name="list_already_contains_overwrite">List already contains %s, overwrite?</string>
    <string name="add_job_button_text">+Job</string>
    <string name="in_store_label">In store:</string>
    <string name="fill_quantity">Fill quantity!</string>
    <string name="add_job_first">Add job first!</string>
    <string name="job_name_hint">Job name</string>
    <string name="fill_job_name">Fill job name!</string>
    <string name="quantity_hint">Quantity</string>
    <string name="button_text_all">All</string>
    <string name="return_text_label">Return:</string>
    <string name="remove">Remove</string>
    <string name="nothing_to_return">Nothing to return!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure">Are You sure?</string>
    <string name="it_is_impossible_to_take_more_than">It is impossible to take more than %d</string>
    <string name="it_is_impossible_to_return_more_than">It is impossible to return more than %d</string>
    <string name="list_already_contains">List already contains %s</string>
    <string name="save_exit">Save exit</string>
    <string name="delete">Delete</string>
    <string name="clear_n_empty">Clear \n empty</string>
    <string name="job">Job :</string>
    <string name="issue">Issue</string>
    <string name="total">Total:</string>
    <string name="edit_label">Edit</string>
    <string name="add_job_label">Add job</string>
    <string name="list_already_contains_s_overwrite">List already contains %s, overwrite?</string>
    <string name="name">Name</string>
    <string name="nothing_to_save">Nothing to save!</string>
    <string name="file_will_saved_to_downloads">File will saved to \n \"Downloads\"</string>
    <string name="create_and_share">Create And Share</string>
    <string name="select_job_first">select job first:</string>
    <string name="create_excel_file">Create excel file</string>
    <string name="file_xls_saved">File %s.xls saved</string>
    <string name="file_xls_not_saved">File %s.xls not saved</string>
    <string name="excel_file">Excel File</string>
    <string name="please_find_attached_the_excel_file">Please find attached the Excel file.</string>
    <string name="send_email">Send Email</string>
    <string name="excel_rowname_tool">Tool</string>
    <string name="excel_row_name_quantity">Quantity</string>
    <string name="internet_unavailable">Internet unavailable!</string>
    <string name="exit">Exit</string>
    <string name="exit_button_text">Exit</string>
    <string name="save_to_internet">Save to internet</string>
    <string name="offline">Offline</string>
    <string name="retry">Retry</string>
    <string name="not_loaded">Not loaded!</string>
    <string name="problem_with_internet">It\'s looks like You have problem with internet or server, retry or work offline?</string>
    <string name="uploaded">Uploaded!</string>
    <string name="button_text_retry">Retry!</string>
    <string name="remove_job">Remove</string>
</resources>