<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_gray"
        android:padding="4dp">

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/border"
            android:padding="8dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewTotalQuantityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/common_text"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewName" />

        <TextView
            android:id="@+id/textViewTotalQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/textViewTotalQuantityLabel"
            app:layout_constraintStart_toEndOf="@+id/textViewTotalQuantityLabel"
            app:layout_constraintTop_toTopOf="@+id/textViewTotalQuantityLabel"
            android:paddingStart="8dp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textViewInStockLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/store_text"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTotalQuantityLabel" />

        <TextView
            android:id="@+id/textViewInStock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/textViewInStockLabel"
            app:layout_constraintEnd_toEndOf="@+id/textViewTotalQuantity"
            app:layout_constraintStart_toStartOf="@+id/textViewTotalQuantity"
            app:layout_constraintTop_toTopOf="@+id/textViewInStockLabel"
            android:paddingStart="8dp"
            tools:ignore="RtlSymmetry"/>

        <TextView
            android:id="@+id/textViewInUseLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/outside_text"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewInStockLabel" />

        <TextView
            android:id="@+id/textViewInUse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/textViewInUseLabel"
            app:layout_constraintEnd_toEndOf="@+id/textViewInStock"
            app:layout_constraintStart_toStartOf="@+id/textViewInStock"
            app:layout_constraintTop_toTopOf="@+id/textViewInUseLabel"
            android:paddingStart="8dp"
            tools:ignore="RtlSymmetry"/>

        <TextView
            android:id="@+id/textViewGiveLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/give_text"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/textViewReturnLabel" />

        <TextView
            android:id="@+id/textViewReturnLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/return_text"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewName"
            app:srcCompat="@drawable/arrow_right"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            app:srcCompat="@drawable/arrow_left"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintStart_toEndOf="@+id/textViewTotalQuantity"
            app:layout_constraintTop_toBottomOf="@+id/textViewName"
            app:srcCompat="@drawable/splash"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>