<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    tools:context=".EditActivity">

    <EditText
        android:id="@+id/editTextEditTitle"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="Name"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/textViewQuantityEditLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/quantity_label"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEditTitle" />

    <EditText
        android:id="@+id/editTextEditQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:background="@drawable/border"
        android:ems="3"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewQuantityEditLabel"
        app:layout_constraintStart_toEndOf="@+id/textViewQuantityEditLabel"
        app:layout_constraintTop_toTopOf="@+id/textViewQuantityEditLabel"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/buttonCancelEdit"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/design_default_color_error"
        android:onClick="buttonCancelEditPressed"
        android:text="@android:string/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEditQuantity" />

    <Button
        android:id="@+id/buttonOkEdit"
        android:layout_width="120dp"
        android:layout_height="52dp"
        android:layout_marginEnd="32dp"
        android:onClick="buttonOkEditPressed"
        android:text="@android:string/ok"
        app:layout_constraintBottom_toBottomOf="@+id/buttonCancelEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonCancelEdit" />

    <Button
        android:id="@+id/buttonRemove"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:onClick="buttonRemoveEditPressed"
        android:text="@string/remove"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCancelEdit" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Edit"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRemove"
        app:srcCompat="@drawable/splash" />

</androidx.constraintlayout.widget.ConstraintLayout>
